# OpenRAG

./: .dockerignore  .env.docker.example  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  debug_neo4j_relationships.py  docker-compose.yml  install_package.sh  neo4j_queries.md  pyproject.toml  quick_test.py  quick_test_contextualRAG.py  quick_test_graphRAG.py  requirements-dev.txt  requirements.txt  setup_environment.sh  test_optional_ollama.py
.claude/commands/: execute-prp.md  fix-github-issue.md  generate-prp.md
.serena/: project.yml
PRPs/: prp_mcp_rag_server.md
PRPs/issues_user/: INITIAL.md
PRPs/templates/: prp_base.md
docs/: INSTALLATION.md  README.md  SETUP_SUMMARY.md  TESTING.md  api-reference.md  architecture.md  configuration.md  developer-guide.md  faq.md  lab_journal.md  quick-start.md  troubleshooting.md  user-guide.md
examples/: document_manager.py  document_processor.py  document_watcher.py  rag_engine.py  vector_store.py
src/openrag/: __init__.py  config.py  server.py
src/openrag/core/: __init__.py  chunker.py  contextual_processor.py  contextual_vector_store.py  embedder.py  embedder.py.bak  graph_processor.py  graph_vector_store.py  ollama_client.py  vector_store.py
src/openrag/models/: __init__.py  contextual_schemas.py  graph_schemas.py  schemas.py
src/openrag/tools/: __init__.py  ingest.py  manage.py  query.py  stats.py
src/openrag/utils/: __init__.py  async_tasks.py  logger.py  validation.py
tests/: conftest.py  test_cancel_ingestion.py  test_chunker.py  test_doc.txt  test_graph_integration.py  test_graph_processor.py  test_graph_vector_store.py  test_ingest_text.py  test_injectionDoc.py  test_integration.py  test_queryDoc.py  test_validation.py
tests/quick/: test_normalRAG.py
tests/test_chroma_db/: chroma.sqlite3
